Revert es8 migration related commits